Added initialize module

--- a/Lattice_Membrane_Monte_Carlo/CMakeLists.txt
+++ b/Lattice_Membrane_Monte_Carlo/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (Lattice_Membrane_Monte_Carlo "Lattice_Membrane_Monte_Carlo.cpp" "Lattice_Membrane_Monte_Carlo.h" "evolution.h" "evolution.cpp" "membrane.h" "membrane.cpp" "lipid.h" "lipid.cpp" "math_functions.cpp" "math_functions.h" "qol_functions.h" "qol_functions.cpp" "energy.h" "energy.cpp" "periodicboundary.h" "periodicboundary.cpp" "parameters.h" "parameters.cpp" "output.h" "output.cpp" "system.h" "system.cpp" "mc_moves.cpp" "mc_moves.h")
+add_executable (Lattice_Membrane_Monte_Carlo "Lattice_Membrane_Monte_Carlo.cpp" "Lattice_Membrane_Monte_Carlo.h" "evolution.h" "evolution.cpp" "membrane.h" "membrane.cpp" "lipid.h" "lipid.cpp" "math_functions.cpp" "math_functions.h" "qol_functions.h" "qol_functions.cpp" "energy.h" "energy.cpp" "periodicboundary.h" "periodicboundary.cpp" "parameters.h" "parameters.cpp" "output.h" "output.cpp" "system.h" "system.cpp" "mc_moves.cpp" "mc_moves.h" "initialize.cpp" "initialize.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Lattice_Membrane_Monte_Carlo PROPERTY CXX_STANDARD 20)
